--- a/css/style.css
+++ b/css/style.css
@@ -2114,6 +2114,7 @@ padding-top:10px;
     font-size: 1.1rem;
     color: var(--text-dark);
     margin-bottom: 0.1rem;
+    margin-right: 0.1rem;
   }
 
   .timeline-item span {
@@ -2132,7 +2133,7 @@ padding-top:10px;
   white-space: normal;
   hyphens: auto;
 
-  max-width: 55%;  /* Adjust this value as needed */
+  max-width: 52%;  /* Adjust this value as needed */
 }
 
 }
