--- a/css/style.css
+++ b/css/style.css
@@ -2111,11 +2111,17 @@ padding-top:10px;
    
 
   .timeline-item h3 {
-    font-size: 1.1rem;
-    color: var(--text-dark);
-    margin-bottom: 0.1rem;
-    margin-right: 0.5rem;
-  }
+  font-size: 1.1rem;
+  color: var(--text-dark);
+  margin-bottom: 0.1rem;
+  margin-right: 0.5rem;
+
+  max-width: 100%;
+  word-wrap: break-word;
+  overflow-wrap: break-word;
+  white-space: normal;
+}
+
 
   .timeline-item span {
     font-size: 0.85rem;
