--- a/css/style.css
+++ b/css/style.css
@@ -2042,6 +2042,7 @@ padding-right:3rem;
   /* Adjust padding-left to align text better */
   .service-item-text {
     padding-left: 45px;
+    padding-right: 1rem;
   }
 
   /* Carousel dots container */
