--- a/css/style.css
+++ b/css/style.css
@@ -2592,3 +2592,12 @@ padding-right:3rem;
     margin-bottom: 1rem;    /* Reduce vertical spacing */
   }
 }
+
+
+.click-hint {
+  text-align: center;
+  font-size: 0.95rem;
+  color: #555;
+  margin-bottom: 10px;
+  font-style: italic;
+}
